Support reranking based on max score of multiple snippets per document